--- a/package.json
+++ b/package.json
@@ -12,11 +12,16 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "animate.css": "^4.1.1",
+    "bootstrap": "^5.1.1",
     "material-ui-icons": "^1.0.0-beta.36",
     "react": "^17.0.2",
     "react-alice-carousel": "^2.5.1",
     "react-dom": "^17.0.2",
     "react-fontawesome": "^1.7.1",
+    "react-icons": "^4.2.0",
+    "react-notifications": "^1.7.2",
+    "react-notifications-component": "^3.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-slick": "^0.28.1",
